--- a/src/partials/Header.html
+++ b/src/partials/Header.html
@@ -1,90 +1,88 @@
-
-<div class="container header-container">
-  <a href="/index.html" class="logo"
-    ><span class="logo-text">SIMPLY CHOCOLATE</span>
-    <svg class="logo-icon">
-      <!-- <use href="./images/icons.svg#"></use> -->
-    </svg>
-  </a>
-  <ul class="list nav-list">
-    <li class="nav-item current">
-      <a href="/index.html" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">How it's made</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">Our products</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">Top sellers</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">Chocolate is loved</a>
-    </li>
-  </ul>
-  <ul class="list soc-list">
-    <li class="soc-item">
-      <a class="link soc-link" href="#">
-        <svg class="soc-icon" width="20" height="20">
-          <use href="./images/icons.svg#icon-instagram-tab"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="soc-item">
+<header class="container header-container">
+    <a href="/index.html" class="logo"
+      ><span class="logo-text">SIMPLY CHOCOLATE</span>
+      <svg class="logo-icon">
+        <use href="./images/icons.svg#icon-logo"></use>
+      </svg>
+    </a>
+    <ul class="list nav-list">
+      <li class="nav-item current">
+        <a href="/index.html" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">How it's made</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Our products</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Top sellers</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Chocolate is loved</a>
+      </li>
+    </ul>
+    <ul class="list soc-list">
+      <li class="soc-item">
         <a class="link soc-link" href="#">
           <svg class="soc-icon" width="20" height="20">
-            <!-- <use href="./"></use> -->
-             
+            <use href="./images/icons.svg#icon-instagram-tab"></use>
           </svg>
         </a>
       </li>
-  </ul>
-  <button class="button burger-menu" data-menu-open aria-label="Open menu">
-    <svg class="burger-icon">
-      <use href="./images/icons.svg#icon-menu-mob"></use>
-    </svg>
-  </button>
-</div>
-<div class="sidebar is-hidden" data-menu>
-  <button type="button" data-menu-close class="mob-close">
-    <svg class="mob-close-icon" width="28px" height="28px">
-      <use href="./images/icons.svg#icon-close"></use>
-    </svg>
-  </button>
-  <div class="container mob-container">
-    <ul class="list mob-nav-list">
-      <li class="mob-nav-item current">
-        <a href="/index.html" class="mob-nav-link">Home</a>
-      </li>
-      <li class="mob-nav-item">
-        <a href="#" class="mob-nav-link">How it's made</a>
-      </li>
-      <li class="mob-nav-item">
-        <a href="#" class="mob-nav-link">Our products</a>
-      </li>
-      <li class="mob-nav-item">
-        <a href="#" class="mob-nav-link">Top sellers</a>
-      </li>
-      <li class="mob-nav-item">
-        <a href="#" class="mob-nav-link">Chocolate is loved</a>
-      </li>
-    </ul>
-      <ul class="list mob-soc-list">
-        <li class="mob-soc-item">
-          <a class="link mob-soc-link" href="#">
-            <svg class="mob-soc-icon" width="20" height="20">
-              <use href="./images/icons.svg#icon-instagram-mob"></use>
+      <li class="soc-item">
+          <a class="link soc-link" href="#">
+            <svg class="soc-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter-tab"></use> 
             </svg>
           </a>
         </li>
-        <li class="mob-soc-item">
+    </ul>
+    <button class="button burger-menu" data-menu-open aria-label="Open menu">
+      <svg class="burger-icon">
+        <use href="./images/icons.svg#icon-menu-mob"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="sidebar is-hidden" data-menu>
+    <button type="button" data-menu-close class="mob-close">
+      <svg class="mob-close-icon" width="28px" height="28px">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <div class="container mob-container">
+      <ul class="list mob-nav-list">
+        <li class="mob-nav-item current">
+          <a href="/index.html" class="mob-nav-link">Home</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="#" class="mob-nav-link">How it's made</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="#" class="mob-nav-link">Our products</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="#" class="mob-nav-link">Top sellers</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="#" class="mob-nav-link">Chocolate is loved</a>
+        </li>
+      </ul>
+        <ul class="list mob-soc-list">
+          <li class="mob-soc-item">
             <a class="link mob-soc-link" href="#">
-              <svg class="mob-soc-icon">
-                <use href="./images/icons.svg#icon-twitter-mob"></use>
+              <svg class="mob-soc-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram-mob"></use>
               </svg>
             </a>
           </li>
-      </ul>
-  </div>
-</div>
+          <li class="mob-soc-item">
+              <a class="link mob-soc-link" href="#">
+                <svg class="mob-soc-icon">
+                  <use href="./images/icons.svg#icon-twitter-mob"></use>
+                </svg>
+              </a>
+            </li>
+        </ul>
+    </div>
+</header>
