--- a/src/partials/Hero.html
+++ b/src/partials/Hero.html
@@ -1,5 +1,5 @@
-
-<div class="container hero-container">
+<section>
+  <div class="container hero-container">
   <div class="hero-section">
     <div class="hero-bg">
       <div class="hero-content">
@@ -23,3 +23,4 @@
     </div>
   </div>
 </div>
+</section>
