--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,4 +2,5 @@
 
 @import url('./header.css');
 @import url('./hero.css');
-@import url('./benefits.css')
+@import url('./benefits.css');
+@import url('./about.css');
