--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -17,7 +17,7 @@
         <div class="card">
           <div class="card-front"><img
             class="card-image"
-            src="../images/milk-chocolate.png"
+            src="./images/milk-chocolate.png"
             alt="Milk Chocolate"
           />
           <h3 class="text-card">MILK CHOCOLATE</h3></div>
@@ -44,7 +44,7 @@
       <li class="about-item">
         <div class="card">
             <div class="card-front">
-          <img class="card-image" src="../images/milk.png" alt="Milk" />
+          <img class="card-image" src="./images/milk.png" alt="Milk" />
           <h3 class="text-card">MILK</h3></div>
           <div class="card-back">
             <div class="card-wrap">
@@ -69,7 +69,7 @@
       </li>
       <li class="about-item">
         <div class="card"><div class="card-front">
-          <img class="card-image" src="../images/nuts.png" alt="Nuts" />
+          <img class="card-image" src="./images/nuts.png" alt="Nuts" />
           <h3 class="text-card">NUTS</h3></div>
           <div class="card-back">
             <div class="card-wrap">
@@ -97,7 +97,7 @@
             <div class="card-front">
           <img
             class="card-image"
-            src="../images/semi-sweet.png"
+            src="./images/semi-sweet.png"
             alt="Semi-Sweet Chocolate"
           />
           <h3 class="text-card">SEMI-SWEET CHOCOLATE</h3></div>
