--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,6 +1,5 @@
 .about-section {
     margin-bottom: 72px;
-    padding: 20px 0;
 }
 @media screen and (min-width: 768px) {
     .about-section {
@@ -106,7 +105,6 @@ max-width: 411px;
     backface-visibility: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 28px;
   }
   
@@ -115,22 +113,28 @@ max-width: 411px;
   }
   
   .card-back {
-    transform: rotateY(180deg);
+    /* transform: rotateY(180deg); */
     transition: transform var(--transition);
     background-color: var(--white-color);
     color: var(--text-color);
     border-radius: 13px;
-    
     z-index: 1;
   }
 
-  .about-item:is(:hover, :focus) .card-back {
+  /* .about-item:is(:hover, :focus) .card-back {
     transform: rotateY(0);
   }
-  
+   */
   .card-wrap {
     height: 100%;
     overflow: auto;
+  }
+
+  .card-header {
+    position: sticky;
+    top: 0px;
+    padding-bottom: 14px;
+    background-color: var(--white-color);
   }
   
   .about-item:hover .card-back {
@@ -216,4 +220,32 @@ max-width: 411px;
       flex: 0 0 calc(25% - 24px);
       max-width: calc(25% - 24px);
     }
+  }
+
+  .card:hover {
+    transform: scale(1.05) rotate(3deg); /* Увеличение и лёгкий поворот */
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4); /* Увеличенная тень */
+    border-radius: 15px;
+  }
+  
+  .card-front {
+    border: 1px solid var(--brand-color);
+    border-radius: 15px;
+    transition: opacity 0.3s ease;
+  }
+  
+  .card-back {
+    background-color: var(--white-color);
+    color: var(--text-color);
+    border-radius: 15px;
+    opacity: 0; /* Скрываем заднюю сторону по умолчанию */
+    transition: opacity 0.3s ease;
+  }
+  
+  .card.flipped .card-front {
+    opacity: 0; /* Скрываем переднюю сторону */
+  }
+  
+  .card.flipped .card-back {
+    opacity: 1; /* Показываем заднюю сторону */
   }
