--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,7 @@
 @import url('./hero.css');
 @import url('./benefits.css');
 @import url('./about.css');
+@import url('./how.css');
+@import url('./top.css');
+@import url('./subscribe.css');
+@import url('./footer.css');
