--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,26 +1,76 @@
 .sub-section {
-    margin-bottom: 72px;
+  margin-bottom: 72px;
+  background:  linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), url(../images/subscribe.jpg) lightgray 0px -481.157px / 100% 375.122% no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 62px 0;
+}
+@media (min-width: 768px) {
+  .sub-section {
+    margin-bottom: 100px;
   }
-  @media (min-width: 768px) {
-    .sub-section {
-      margin-bottom: 100px;
-    }
+}
+.sub-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+@media (min-width: 1024px) {
+  .sub-section {
+    margin-bottom: 128px;
   }
-  
-  @media (min-width: 1024px) {
-    .sub-section {
-      margin-bottom: 128px;
-    }
+}
+.sub-title {
+  font-family: 'Montserrat';
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.6px;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+  margin-bottom: 32px;
+  text-align: center;
+  color: var(--white-color);
+}
+.sub-button {
+  padding: 12px 28px;
+  text-decoration: none;
+  border-radius: 100px;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--white-color);
+  background-color: var(--brand-color);
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 120px;
+}
+@media (min-width: 768px) {
+  .sub-button {
+    padding: 14px 40px;
+    min-width: 162px;
+    font-size: 18px;
   }
-  .sub-title {
-    font-family: 'Montserrat';
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 120%;
-    letter-spacing: -0.6px;
-    text-transform: uppercase;
-    margin-bottom: 24px;
-    margin-bottom: 32px;
-    text-align: center;
-    color: var(--text-color);
-  }
+}
+
+.sub-button:hover,
+.sub-button:focus {
+  background-color: var(--light-color);
+  color: var(--brand-color);
+}
+
+.sub-text {
+  color: var(--white-color);
+  text-align: center;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 128.571%;
+  letter-spacing: -0.28px;
+  max-width: 467px;
+}
+
