--- a/src/css/header.css
+++ b/src/css/header.css
@@ -57,13 +57,15 @@
   justify-content: space-between;
   z-index: 1;
   top: 0;
-  right: -0;
+  right:0;
   background-color: #111;
   height: 100%;
   width: 220px;
   overflow-x: hidden;
   padding-top: 20px;
+  transition: right 0.3s ease;
 }
+
 @media screen and (min-width: 768px) {
   .sidebar {
     width: 290px;
