--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,5 +6,7 @@
 @import url('./about.css');
 @import url('./how.css');
 @import url('./top.css');
+@import url('./reviews.css');
 @import url('./subscribe.css');
 @import url('./footer.css');
+
