--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -49,6 +49,7 @@
   }
   .container {
     width: 100%;
+    max-width: 320px;
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
@@ -57,6 +58,7 @@
   @media screen and (min-width: 428px) {
     .container {
       width: 100%;
+      max-width: 428px;
       padding-left: 20px;
       padding-right: 20px;
       margin: 0 auto;
@@ -66,6 +68,7 @@
   @media screen and (min-width: 768px) {
     .container {
       width: 100%;
+      max-width: 736px;
       padding-left: 16px;
       padding-right: 16px;
       margin: 0 auto;
@@ -74,6 +77,7 @@
   @media screen and (min-width: 1158px) {
     .container {
       width: 100%;
+      max-width: 1126px;
       padding-left: 16px;
       padding-right: 16px;
       margin: 0 auto;
