--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,11 +10,11 @@
         </div>
         <div class="buttons-scroll">
           <div class="hero-buttons">
-            <a href="#" class="btn btn-primary">Buy now</a>
+            <a href="#" class="btn btn-primary" id="openModalBtn">Buy now</a>
             <a href="#" class="btn btn-secondary">How it's made</a>
           </div>
           <div class="scroll-down">
-            <a href="#" class="scroll-link"
+            <a href="#footer" class="scroll-link"
               >scroll down
               <span class="arrow-wrap"
                 ><svg class="arrow-icon">
