--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -107,7 +107,7 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
-      <button class="review-button">Leave a review</button>
+      <button class="review-button" id="openLeaveModalBtn">Leave a review</button>
     </div>
   </div>
 </section>
