Update product section

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
         <div class="buttons-scroll">
           <div class="hero-buttons">
             <a href="#" class="btn btn-primary" id="openModalBtn">Buy now</a>
-            <a href="#" class="btn btn-secondary">How it's made</a>
+            <a href="#how" class="btn btn-secondary how-scroll">How it's made</a>
           </div>
           <div class="scroll-down">
             <a href="#footer" class="scroll-link"
