--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -1,4 +1,4 @@
-<section class="how-section">
+<section class="how-section" id="how">
   <div class="container">
       <h2 class="how-title">HOW IT'S <span class="title-color">MADE?</span></h2>
     <div class="how-content">
