Update modal subscribe

--- a/src/partials/modal-leave.html
+++ b/src/partials/modal-leave.html
@@ -1,4 +1,4 @@
-<div class="modal-leave is-hidden-leave" id="modal">
+<div class="modal-leave is-hidden-leave" id="modal-leave">
 <section class="leave-section ">
     <div class="container leave-container">
       <button type="button" id="closeLeaveModalBtn" class="mod-close">
