--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
 @import url('./hero.css');
 @import url('./benefits.css');
 @import url('./about.css');
+@import url('./our.css');
 @import url('./how.css');
 @import url('./top.css');
 @import url('./reviews.css');
@@ -12,4 +13,4 @@
 
 @import url('./modal-buy.css');
 @import url('./modal-leave.css');
-@import url('./our.css');
+@import url('./modal-subscribe.css');
