--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -7,6 +7,6 @@
       finest ingredients and handcrafted with the utmost care, each piece is a
       work of art that is sure to please.
      </p>
-     <button class="sub-button">Subscribe</button>
+     <button class="sub-button open-modal-sub-btn" id="openSubModalBtn">Subscribe</button>
   </div>
 </section>
