--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,16 +10,16 @@
         <a href="/index.html" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">How it's made</a>
+        <a href="#how" class="nav-link how-scroll">How it's made</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Our products</a>
+        <a href="#our" class="nav-link our-scroll">Our products</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Top sellers</a>
+        <a href="#top" class="nav-link top-scroll" >Top sellers</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Chocolate is loved</a>
+        <a href="#review" class="nav-link review-scroll">Chocolate is loved</a>
       </li>
     </ul>
     <ul class="list soc-list">
