--- a/src/partials/our.html
+++ b/src/partials/our.html
@@ -1,4 +1,4 @@
-<section class="our-section">
+<section class="our-section" id="our">
     <div class="container">
       <h2 class="our-title">
         Our <span class="title-color">Products</span>
