--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews-section">
+<section class="reviews-section" id="review">
   <div class="container">
     <header class="reviews-header">
       <h2 class="reviews-title">
