--- a/src/partials/top.html
+++ b/src/partials/top.html
@@ -1,13 +1,16 @@
-<section class="top-section">
+<section class="top-section" id="top">
   <div class="container">
     <h2 class="top-title"><span class="title-color">TOP</span> SELLERS</h2>
     <ul class="top-list">
       <li class="top-item">
+        <picture>
+          <source srcset="./images/top-beans-desktop.jpg" media="(min-width: 1024px)" />
+          <source srcset="./images/top-beans-tablet.jpg" media="(min-width: 768px)" />
         <img
           class="top-image"
           src="./images/top-beans.jpg"
           alt="Chocolate with Cocoa Beans"
-        />
+        /></picture>
       </li>
       <p class="top-text ul-text">
         Crazy enough chocolate originates from a bean just like the coffee bean
@@ -15,16 +18,19 @@
         discovered by the Native American tribe called the Mayans.
       </p>
       <li class="top-item">
+        <picture>
+          <source srcset="./images/top-bar-desktop.jpg" media="(min-width: 1024px)" />
+          <source srcset="./images/top-bar-tablet.jpg" media="(min-width: 768px)" />
         <img
           class="top-image"
           src="./images/top-bar.jpg"
           alt="Chocolate with Cocoa Beans"
-        />
+        /></picture>
       </li>
       <li class="top-item top-item-desk">
         <img
           class="top-image"
-          src="./images/top-beans.jpg"
+          src="./images/top-truffel-desktop.jpg"
           alt="Chocolate with Cocoa Beans"
         />
       </li>
